c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile-linux@sigign.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/sigign.linux.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/sigign.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
pub type __sighandler_t = Option<unsafe extern "C" fn(core::ffi::c_int) -> ()>;
#[no_mangle]
pub unsafe extern "C" fn foo() {
    let mut handler: Option<unsafe extern "C" fn(core::ffi::c_int) -> ()> =
        ::core::mem::transmute::<
            libc::intptr_t,
            Option<unsafe extern "C" fn(core::ffi::c_int) -> ()>,
        >(1 as libc::intptr_t);
}
