c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile-macos@rotate.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/rotate.macos.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/rotate.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
<<<<<<< HEAD
pub unsafe extern "C" fn rotate_left_64(mut x: core::ffi::c_ulonglong) -> core::ffi::c_ulonglong {
    return x.rotate_left(4 as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_right_64(mut x: core::ffi::c_ulonglong) -> core::ffi::c_ulonglong {
    return x.rotate_right(4 as u32);
=======
pub unsafe extern "C" fn rotate_left_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return x.rotate_left(4 as ::core::ffi::c_int as ::core::ffi::c_ulonglong as u32);
}
#[no_mangle]
pub unsafe extern "C" fn rotate_right_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return x.rotate_right(4 as ::core::ffi::c_int as ::core::ffi::c_ulonglong as u32);
>>>>>>> refs/subrepo/c2rust/fetch
}
