c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile-macos@sigign.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/sigign.macos.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/sigign.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn foo() {
    let mut handler: Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()> =
        ::core::mem::transmute::<
<<<<<<< HEAD
            libc::intptr_t,
            Option<unsafe extern "C" fn(core::ffi::c_int) -> ()>,
        >(1 as libc::intptr_t);
=======
            ::libc::intptr_t,
            Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()>,
        >(1 as ::core::ffi::c_int as ::libc::intptr_t);
>>>>>>> refs/subrepo/c2rust/fetch
}
